--- a/index.ipynb
+++ b/index.ipynb
@@ -199,12 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "x_"
+    "x_values"
    ]
   },
   {
@@ -220,7 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]"
+    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
+    "y_"
    ]
   },
   {
