automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,22 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': [], 'type': 'bar'}"
+       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'type': 'bar'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_values = []\n",
+    "text_values = x_values\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}\n",
     "bar_trace_first_three_pops"
    ]
