--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,17 +362,21 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
          "type": "bar"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"6ec53807-8af9-48f2-b1cf-deb6810a5bfb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6ec53807-8af9-48f2-b1cf-deb6810a5bfb\", [{\"type\": \"bar\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"dc20e8af-055f-4d1e-b4d5-b3b5d51e9873\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dc20e8af-055f-4d1e-b4d5-b3b5d51e9873\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6ec53807-8af9-48f2-b1cf-deb6810a5bfb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6ec53807-8af9-48f2-b1cf-deb6810a5bfb\", [{\"type\": \"bar\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"dc20e8af-055f-4d1e-b4d5-b3b5d51e9873\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dc20e8af-055f-4d1e-b4d5-b3b5d51e9873\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
