--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
    ],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, ''}\n",
     "bar_trace_first_three_pops"
    ]
   },
