--- a/index.ipynb
+++ b/index.ipynb
@@ -312,16 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'type': 'bar'}"
+       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'type': 'bar',\n",
+       " 'y': [2891000, 2800000, 2581000]}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
