--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -320,18 +320,17 @@
       "text/plain": [
        "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
        " 'type': 'bar',\n",
-       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
        " 'y': [2891000, 2800000, 2581000]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x': x_values, 'y': y_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'y': y_values}\n",
     "bar_trace_first_three_pops"
    ]
   },
