--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
    ],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'y': y_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': text_values, 'y': y_values}\n",
     "bar_trace_first_three_pops"
    ]
   },
