--- a/index.ipynb
+++ b/index.ipynb
@@ -312,25 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'bar',\n",
-       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
-       " 'y': [2891000, 2800000, 2581000]}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'tex''x': text_values, 'y': y_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values,\n",
+    "                                'x': text_values, 'y': y_values}\n",
     "bar_trace_first_three_pops"
    ]
   },
