--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "city_name = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "city_pop = \n",
     "\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
