automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,31 +417,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4758, 2731571, 3194]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_name = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "city_pop = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "city_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': city_name, 'y': city_area, 'text': city_name}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "scatter",
+         "x": [],
+         "y": []
+        },
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "scatter",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          4758,
+          2731571,
+          3194
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"2c51e9c3-b1c5-4f74-8f38-13f80ce40324\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2c51e9c3-b1c5-4f74-8f38-13f80ce40324\", [{\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}, {\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"2c51e9c3-b1c5-4f74-8f38-13f80ce40324\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2c51e9c3-b1c5-4f74-8f38-13f80ce40324\", [{\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}, {\"type\": \"scatter\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
