--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
     "city_pop = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "city_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': city_name, 'y': city_area, 'text': city_name}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': city_name, 'y': city_pop, 'text': city_name}\n"
    ]
   },
   {
