--- a/index.ipynb
+++ b/index.ipynb
@@ -417,15 +417,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'type': 'scatter',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'y': [2891000, 2800000, 2581000]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_name = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "city_pop = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "city_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': city_name, 'y': city_area, 'text': city_name}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': city_name, 'y': city_pop, 'text': city_name}\n"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': city_name, 'y': city_pop, 'text': city_name}\n",
+    "\n",
+    "bar_trace_first_three_pops\n"
    ]
   },
   {
