automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,21 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
-       " 'type': 'scatter',\n",
-       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
-       " 'y': [4758, 2731571, 3194]}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'scatter', 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'y': [4758, 2731571, 3194], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']} {'type': 'scatter', 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'y': [2891000, 2800000, 2581000], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\n"
+     ]
     }
    ],
    "source": [
@@ -442,7 +436,7 @@
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': city_name, 'y': city_area, 'text': city_name}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': city_name, 'y': city_pop, 'text': city_name}\n",
     "\n",
-    "bar_trace_first_three_areas\n"
+    "print(bar_trace_first_three_areas, bar_trace_first_three_pops)\n"
    ]
   },
   {
